fix modal jumping

--- a/app/assets/javascripts/scripts/core/stylesheets/modal.css
+++ b/app/assets/javascripts/scripts/core/stylesheets/modal.css
@@ -1,3 +1,12 @@
+.modal-open .application {
+    overflow: hidden;
+}
+
+body.modal-open {
+    transform-origin: initial !important;
+    transform: initial !important;
+}
+
 .modal.modal-notification {
     height: auto;
     width: auto;
